class7/lessons/cl7_ls10_ipy_output.txt
(py3_venv) [ponnathan@pylab36b lessons]$ ipython
Python 3.11.6 (main, Oct  4 2023, 18:55:41) [GCC 11.4.1 20230605 (Red Hat 11.4.1-2)]
Type 'copyright', 'credits' or 'license' for more information
IPython 7.31.1 -- An enhanced Interactive Python. Type '?' for help.

In [1]: a = """
   ...: <rpc-reply xmlns:junos="http://xml.juniper.net/junos/12.1X44/junos">
   ...:     <software-information>
   ...:         <host-name>pynet-jnpr-srx1</host-name>
   ...:         <product-model>srx100h2</product-model>
   ...:         <product-name>srx100h2</product-name>
   ...:         <jsr/>
   ...:         <package-information>
   ...:             <name>junos</name>
   ...:             <comment>JUNOS Software Release [12.1X44-D35.5]</comment>
   ...:         </package-information>
   ...:     </software-information>
   ...:     <cli>
   ...:         <banner/>
   ...:     </cli>
   ...: </rpc-reply>
   ...: """

In [2]: import lxml import etree
  File "<ipython-input-2-f9855c6263b7>", line 1
    import lxml import etree
                ^
SyntaxError: invalid syntax


In [3]: from lxml import etree

In [4]: etree.fromstring(a)
Out[4]: <Element rpc-reply at 0x7fb6a6c8ce80>

In [5]: my_xml = etree.fromstring(a)

In [6]: etree.tostring(my_xml)
Out[6]: b'<rpc-reply xmlns:junos="http://xml.juniper.net/junos/12.1X44/junos">\n    <software-information>\n        <host-name>pynet-jnpr-srx1</host-name>\n        <product-model>srx100h2</product-model>\n        <product-name>srx100h2</product-name>\n        <jsr/>\n        <package-information>\n            <name>junos</name>\n            <comment>JUNOS Software Release [12.1X44-D35.5]</comment>\n        </package-information>\n    </software-information>\n    <cli>\n        <banner/>\n    </cli>\n</rpc-reply>'

In [7]: etree.tostring(my_xml).decode()
Out[7]: '<rpc-reply xmlns:junos="http://xml.juniper.net/junos/12.1X44/junos">\n    <software-information>\n        <host-name>pynet-jnpr-srx1</host-name>\n        <product-model>srx100h2</product-model>\n        <product-name>srx100h2</product-name>\n        <jsr/>\n        <package-information>\n            <name>junos</name>\n            <comment>JUNOS Software Release [12.1X44-D35.5]</comment>\n        </package-information>\n    </software-information>\n    <cli>\n        <banner/>\n    </cli>\n</rpc-reply>'

In [8]: print(etree.tostring(my_xml).decode())
<rpc-reply xmlns:junos="http://xml.juniper.net/junos/12.1X44/junos">
    <software-information>
        <host-name>pynet-jnpr-srx1</host-name>
        <product-model>srx100h2</product-model>
        <product-name>srx100h2</product-name>
        <jsr/>
        <package-information>
            <name>junos</name>
            <comment>JUNOS Software Release [12.1X44-D35.5]</comment>
        </package-information>
    </software-information>
    <cli>
        <banner/>
    </cli>
</rpc-reply>

In [9]: my_xml
Out[9]: <Element rpc-reply at 0x7fb6a530f300>

In [10]: print(etree.tostring(my_xml).decode())
<rpc-reply xmlns:junos="http://xml.juniper.net/junos/12.1X44/junos">
    <software-information>
        <host-name>pynet-jnpr-srx1</host-name>
        <product-model>srx100h2</product-model>
        <product-name>srx100h2</product-name>
        <jsr/>
        <package-information>
            <name>junos</name>
            <comment>JUNOS Software Release [12.1X44-D35.5]</comment>
        </package-information>
    </software-information>
    <cli>
        <banner/>
    </cli>
</rpc-reply>

In [11]: my_xml.find("software-information")
Out[11]: <Element software-information at 0x7fb6a5ebcd00>

In [12]: my_xml.find("product-name")

In [13]: my_xml.find(".")
Out[13]: <Element rpc-reply at 0x7fb6a530f300>

In [14]: my_xml.find("./software-information/product-name")
Out[14]: <Element product-name at 0x7fb6a52ea180>

In [15]: my_xml.find("software-information/product-name")
Out[15]: <Element product-name at 0x7fb6a52ea180>

In [16]: my_xml.findall("software-information/product-name")
Out[16]: [<Element product-name at 0x7fb6a52ea180>]

In [17]: my_xml.findall(".//product-name")
Out[17]: [<Element product-name at 0x7fb6a52ea180>]

In [18]: my_xml.finda(".//product-name")
---------------------------------------------------------------------------
AttributeError                            Traceback (most recent call last)
<ipython-input-18-3c437ba7bab7> in <module>
----> 1 my_xml.finda(".//product-name")

AttributeError: 'lxml.etree._Element' object has no attribute 'finda'

In [19]: my_xml.find(".//product-name")
Out[19]: <Element product-name at 0x7fb6a52ea180>

In [20]: my_xml.findall(".//product-name")
Out[20]: [<Element product-name at 0x7fb6a52ea180>]

In [21]: my_xml.findall(".//product-name")[0].tsg
---------------------------------------------------------------------------
AttributeError                            Traceback (most recent call last)
<ipython-input-21-b319553d38ba> in <module>
----> 1 my_xml.findall(".//product-name")[0].tsg

AttributeError: 'lxml.etree._Element' object has no attribute 'tsg'

In [22]: my_xml.findall(".//product-name")[0].tag
Out[22]: 'product-name'

In [23]: my_xml.findall(".//product-name")[0].text
Out[23]: 'srx100h2'

In [24]: my_xml.find(".//comment")
Out[24]: <Element comment at 0x7fb6a5362100>

In [25]: my_xml.find(".//comment").text
Out[25]: 'JUNOS Software Release [12.1X44-D35.5]'

In [26]: quit

